src/test/ui/parser/int-literal-too-large-span.stderr
error: integer literal is too large
  --> $DIR/int-literal-too-large-span.rs:4:5
   |
LL |     9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

